# croptimize-cassini-hackathon-2024

./: .env  README.md  pyproject.toml
api/: data_collection_v1.py  data_collection_v2.py  data_collection_v3.py  data_response_v1.json  data_response_v3.json  grib-data.py  main.py
client/: package-lock.json  package.json  tailwind.config.ts
client/src/components/: AboutBody.tsx  AboutTeam.tsx  CropInformation.tsx  CropSelection.tsx  DefaultLayout.tsx  Legend.tsx  MainNav.tsx  Map.tsx  MapStatistic.tsx
client/src/mocks/: lst.json  ranges.json
client/src/pages/: 404.tsx  _app.tsx  about.tsx  crops.tsx  index.tsx
client/src/pages/api/: health.ts
data/: data.grib
notebooks/: Exploration.ipynb  image.tif
